single chat dan group chat
single chat tambah tickstate dan is typing, group belum selesai semua

--- a/AndroidChat-master/app/src/main/AndroidManifest.xml
+++ b/AndroidChat-master/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity android:name=".ListActiveChat" />
         <activity android:name=".GroupChat" />
-        <activity android:name=".ContactListActivity"></activity>
+        <activity android:name=".ContactListActivity" />
+        <activity android:name=".NewGroup"></activity>
     </application>
 
 </manifest>
